# rust-sqlite-example

./: Cargo.toml  README.md
databases/: users  users-shm  users-wal
src/: main.rs  user.rs
