[package]
name = "rust-sqlite-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-std = "1.10.0"
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "0.4.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ], default-features = false }
cli-table = "0.4"
chrono = "0.4.19"